test: a default GC variant